# timestore

./: Cargo.toml  README.md
src/: config.rs  lib.rs  open.rs  reader.rs  writer.rs
tests/: empty.rs  simple.rs
