[package]
name = "timestore"
version = "0.0.1"
edition = "2021"
description = "Fully serializable on-disk datastore for time data"
license = "MPL-2.0"

[dependencies]
derive_builder = "0.13"
anyhow = "1"
glommio = "0.8"
futures = "0.3"
caos = "0.0.5"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
